# qupido

./: Cargo.toml
qupido/: Cargo.toml
qupido/src/: container.rs  lib.rs  pipeline.rs  source.rs
qupido_data/: Cargo.toml
qupido_data/tests/: delta_batch_etl.rs  df_to_delta.rs  oscars_pipeline.rs
src/: container.rs  lib.rs  node.rs  pipeline.rs
