[package]
name = "qupido_data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
qupido = { path = "../qupido" }
deltalake = { version = "0.6.0", features = ["datafusion-ext"] }
# arrow = { version = "31" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
